--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 PROJECT( bump_map )
-FIND_PACKAGE( OpenSceneGraph REQUIRED osgDB osgUtil osgViewer osgFX)
+FIND_PACKAGE( OpenSceneGraph REQUIRED osgDB osgUtil osgViewer osgFX osgGA)
 ADD_EXECUTABLE( main main.cpp )
 INCLUDE_DIRECTORIES(${OPENSCENEGRAPH_INCLUDE_DIRS})
 TARGET_LINK_LIBRARIES(main ${OPENSCENEGRAPH_LIBRARIES} )
